fix: refactor teaser section for improved layout and styling

--- a/index.html
+++ b/index.html
@@ -170,39 +170,21 @@
   <!-- End paper abstract -->
 
   <!-- Teaser video-->
-  <section class="section">
+  <section class="hero teaser">
     <div class="container is-max-desktop">
-      <div class="columns is-centered has-text-centered">
-        <div class="column">
-          <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
-          </h2>
-          <div class="cis-centered"
-            style="width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
-            <figure class="has-text-justified">
-              <img src="static/images/teaser_website.svg" alt="Teaser Image"
-                style="width: 100%; height: auto; display: block;">
-              <figcaption class="subtitle is-6" style="margin-bottom: 3rem">
-                <b>Varied optimal base placement across robotic platforms and task requirements.</b> To demonstrate
-                this, we present several examples using two widely adopted manipulators---the KUKA iiwa (left) and
-                Franka (right) robots. Our examples encompass four key scenarios: (i) optimal base placement for a
-                linear path, (ii) a circular path using the base placement optimized for the linear path (showing
-                unreachable poses), (iii) optimal base placement for the circular path, and (iv) optimal base placement
-                that accommodates both paths. This comparison illustrates the necessity of an efficient method to
-                generate the optimal base placement for each scenario.
-              </figcaption>
-            </figure>
-          </div>
-          <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
-          </h2>
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-              src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
-              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
-              style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
-          </div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
+      <div class="hero-body">
+        <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
+        </h2>
+        <img src="static\images\teaser_website.svg" alt="Teaser" width="100%">
+        <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
+        </h2>
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+            src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
+            frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+            style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
         </div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
       </div>
-    </div>
     </div>
   </section>
   <!-- End teaser video -->
