--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <!-- End paper abstract -->
 
   <!-- Teaser video-->
-  <section class="hero teaser">
+  <section class="section">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column">
