fix: enhance teaser image markup for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
         <div class="column">
           <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
           </h2>
-          <img src="static\images\teaser_website.svg" alt="Teaser" style="padding:56.25% 0 0 0;position:relative;">
+          <figure class="has-text-justified" style="width: 100%; margin: 0;">
+            <img src="static\images\teaser_website.svg" alt="Teaser" style="width: 100%; height: auto; display: block;">
+          </figure>
           <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
           </h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
