fix: update teaser image width for improved visual presentation

--- a/index.html
+++ b/index.html
@@ -163,21 +163,10 @@
               robotic applications, effectively bridging the gap between theoretical motion planning and practical
               deployment where feasible trajectory existence is fundamental.</p>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End paper abstract -->
-
-  <!-- Teaser video-->
-  <section class="section">
-    <div class="container is-max-desktop">
-      <div class="columns is-centered has-text-centered">
-        <div class="column">
           <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
           </h2>
           <figure class="has-text-justified" style="width: 100%; margin: 0;">
-            <img src="static\images\teaser_website.svg" alt="Teaser" style="width: 100%; height: auto; display: block;">
+            <img src="static\images\teaser_website.svg" alt="Teaser" width="150%">
           </figure>
           <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
           </h2>
@@ -191,7 +180,7 @@
       </div>
     </div>
   </section>
-  <!-- End teaser video -->
+  <!-- End paper abstract -->
 
   <!-- B* method -->
   <section class="section">
