fix: update teaser image markup for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
           </div>
           <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
           </h2>
-          <img src="static\images\teaser_website.svg" alt="Teaser" width="150%">
+          <div class="cis-centered"
+            style="width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
+            <img src="static\images\teaser_website.svg" alt="Teaser" width="100%">
+          </div>
           <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
           </h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
