[fix] remove horizontal paddings of teaser figure

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+  <script src="https://player.vimeo.com/api/player.js"></script>
 
   <!-- MathJax -->
   <script>
@@ -164,8 +165,7 @@
               deployment where feasible trajectory existence is fundamental.</p>
           </div>
           <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
-          </h2>
-            <img src="static\images\teaser_website.svg" alt="Teaser" width="100%">
+          <img src="static/images/teaser_website.svg" alt="Teaser" style="width:100%; max-width:100%">
           <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
           </h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
@@ -173,7 +173,6 @@
               frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
               style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
           </div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
       </div>
     </div>
@@ -364,7 +363,6 @@
               frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
               style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
           </div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
       </div>
     </div>
@@ -389,7 +387,7 @@
           <div class="cis-centered">
             <figure class="has-text-justified">
               <img src="static/images/success_rate.svg" alt="Success Rate">
-              <figcaption class="subtitle is-6" style="margin-bottom: 3rem">
+              <figcaption class="subtitle is-6" style="margin-bottom: 3rem;">
                 <b>Success rate comparison between baseline methods using different numbers of inverse kinematics (IK)
                   solutions (b-10, b-100, b-1000) and B* (B*).</b> While baseline methods with more IK samples show
                 higher
@@ -406,7 +404,7 @@
           <div class="is-centered">
             <figure class="has-text-justified">
               <img src="static/images/solution_optimality.svg" alt="Solution Optimality">
-              <figcaption class="subtitle is-6" style="margin-bottom: 3rem">
+              <figcaption class="subtitle is-6" style="margin-bottom: 3rem;">
                 <b>Solution optimality (absolute trajectory error (ATE)) (see Eq. (15)
                   in the manuscript) comparison between baseline methods (b-10, b-100, b-1000; left axis) and B* (B*;
                   right
@@ -422,7 +420,7 @@
           <div class="is-centered">
             <figure class="has-text-justified">
               <img src="static/images/run_time.svg" alt="Run Time">
-              <figcaption class="subtitle is-6" style="margin-bottom: 3rem">
+              <figcaption class="subtitle is-6" style="margin-bottom: 3rem;">
                 <b>Runtime comparison between baseline methods (b-10, b-100, b-1000)
                   and B* (B*) across complexity levels</b>. While baseline methods show increased runtime with higher
                 inverse kinematics (IK) sample counts, B* demonstrates superior efficiency with linear scaling (fit
