[feat] adjust the position of teaser figure

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body>
   <section class="hero">
-    <div class="hero-body">
+    <div class="hero-body" style="padding-bottom: 0;">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
@@ -141,6 +141,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column">
+          <h2 class="subsection-title" style="margin: 0 0 1rem 0;">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
+          <img src="static/images/teaser_website.svg" alt="Teaser" style="width:100%; max-width:100%; margin-bottom: 4rem;">
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>Proper base placement is crucial for task execution feasibility and performance of fixed-base
@@ -164,8 +166,6 @@
               robotic applications, effectively bridging the gap between theoretical motion planning and practical
               deployment where feasible trajectory existence is fundamental.</p>
           </div>
-          <h2 class="subsection-title">Proper Base Placement is Crucial for Task Execution Feasibility</h2>
-          <img src="static/images/teaser_website.svg" alt="Teaser" style="width:100%; max-width:100%">
           <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
           </h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
