--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
   <!-- End Quantitative results -->
 
   <!-- Paper acknowledgment -->
-  <section class="section hero">
+  <section class="section hero" style="padding-top: 0;">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column">
