[fix] fix some typos

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <sup>4</sup> College of Engineering, Peking University
               </span>
               <span class="eql-cntrb"><small><br /><sup>*</sup> Equal Contributor</small></span>
-              <span class="eql-cntrb"><small><br /><sup>✉️</sup> Corresponding Contributor</small></span>
+              <span class="eql-cntrb"><small><br /><sup>✉️</sup> Corresponding Author</small></span>
             </div>
 
             <div class="column has-text-centered">
