--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                  <a href="https://arxiv.org/pdf/2504.12719.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -120,7 +120,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://arxiv.org/abs/2504.12719" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -145,26 +145,14 @@
           <img src="static/images/teaser_website.svg" alt="Teaser" style="width:100%; max-width:100%; margin-bottom: 4rem;">
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
-            <p>Proper base placement is crucial for task execution feasibility and performance of fixed-base
-              manipulators, the dominant solution in robotic automation. Current methods rely on pre-computed kinematics
-              databases generated through sampling to search for solutions. However, they face an inherent trade-off
-              between solution optimality and computational efficiency when determining sampling resolution—a challenge
-              that intensifies when considering long-horizon trajectories, collision avoidance, and task-specific
-              requirements. To address these limitations, we present B*, a novel optimization framework for determining
-              the optimal base placement that unifies these multiple objectives without relying on pre-computed
-              databases. B* addresses this inherently non-convex problem via a two-layer hierarchical approach: The
-              outer layer systematically manages terminal constraints through progressively tightening them,
-              particularly the base mobility constraint, enabling feasible initialization and broad solution space
-              exploration. Concurrently, the inner layer addresses the non-convexities of each outer-layer subproblem by
-              sequential local linearization, effectively transforming the original problem into a tractable sequential
-              linear programming (SLP). Comprehensive evaluations across multiple robot platforms and task complexities
-              demonstrate the effectiveness of B*: it achieves solution optimality five orders of magnitude better than
-              sampling-based approaches while maintaining perfect success rates, all with reduced computational
-              overhead. Operating directly in configuration space, B* not only solves the base placement problem but
-              also enables simultaneous path planning with customizable optimization criteria, making it a versatile
-              framework for various robotic motion planning challenges. B* serves as a crucial initialization tool for
-              robotic applications, effectively bridging the gap between theoretical motion planning and practical
-              deployment where feasible trajectory existence is fundamental.</p>
+            <p>Proper base placement is crucial for task execution feasibility and performance of fixed-base manipulators, the dominant solution in robotic automation.
+              Current methods rely on pre-computed kinematics databases generated through sampling to search for solutions. However, they face an inherent trade-off between solution optimality and computational efficiency when determining sampling resolution—a challenge that intensifies when considering long-horizon trajectories, self-collision avoidance, and task-specific requirements.
+              To address these limitations, we present B*, a novel optimization framework for determining the optimal base placement that unifies these multiple objectives without relying on pre-computed databases.
+              B* addresses this inherently non-convex problem via a two-layer hierarchical approach: The outer layer systematically manages terminal constraints through progressively tightening them, particularly the base mobility constraint, enabling feasible initialization and broad solution space exploration. Concurrently, the inner layer addresses the non-convexities of each outer-layer subproblem by sequential local linearization, effectively transforming the original problem into a tractable sequential linear programming (SLP).
+              Comprehensive evaluations across multiple robot platforms and task complexities demonstrate the effectiveness of B*: it achieves solution optimality five orders of magnitude better than sampling-based approaches while maintaining perfect success rates, all with reduced computational overhead.
+              Operating directly in configuration space, B* not only solves the base placement problem but also enables simultaneous path planning with customizable optimization criteria, making it a versatile framework for various robotic motion planning challenges.
+              B* serves as a crucial initialization tool for robotic applications, bridging the gap between theoretical motion planning and practical deployment where feasible trajectory existence is fundamental. 
+              </p>
           </div>
           <h2 class="subsection-title">Base Placement Optimization and Simultaneous Path Planning Using B* Algorithm
           </h2>
@@ -461,7 +449,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{zhao2025befficientoptimalbase,
+      title={B*: Efficient and Optimal Base Placement for Fixed-Base Manipulators}, 
+      author={Zihang Zhao and Leiyao Cui and Sirui Xie and Saiyao Zhang and Zhi Han and Lecheng Ruan and Yixin Zhu},
+      year={2025},
+      eprint={2504.12719},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2504.12719}, 
+}</code></pre>
     </div>
   </section>
   <!--End BibTex citation -->
