--- a/index.html
+++ b/index.html
@@ -449,14 +449,11 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{zhao2025befficientoptimalbase,
-      title={B*: Efficient and Optimal Base Placement for Fixed-Base Manipulators}, 
-      author={Zihang Zhao and Leiyao Cui and Sirui Xie and Saiyao Zhang and Zhi Han and Lecheng Ruan and Yixin Zhu},
-      year={2025},
-      eprint={2504.12719},
-      archivePrefix={arXiv},
-      primaryClass={cs.RO},
-      url={https://arxiv.org/abs/2504.12719}, 
+      <pre><code>@article{zhao2025b,
+  title={B*: Efficient and Optimal Base Placement for Fixed-Base Manipulators},
+  author={Zhao, Zihang and Cui, Leiyao and Xie, Sirui and Zhang, Saiyao and Han, Zhi and Ruan, Lecheng and Zhu, Yixin},
+  journal={arXiv preprint arXiv:2504.12719},
+  year={2025}
 }</code></pre>
     </div>
   </section>
