--- a/index.html
+++ b/index.html
@@ -498,7 +498,12 @@
   title={B*: Efficient and Optimal Base Placement for Fixed-Base Manipulators},
   author={Zhao, Zihang and Cui, Leiyao and Xie, Sirui and Zhang, Saiyao and Han, Zhi and Ruan, Lecheng and Zhu, Yixin},
   journal={IEEE Robotics and Automation Letters (RA-L)},
-  year={2025}
+  volume={10},
+  number={10},
+  pages={10634-10641},
+  year={2025},
+  publisher={IEEE}
+}
 }</code></pre>
     </div>
   </section>
