Update citation section in index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,36 @@
 </head>
 
 <body>
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+    <div class="navbar-menu">
+      <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
+
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Related Research
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="https://arxiv.org/abs/2403.01694" target="_blank">
+              [T-RO24] Tac-Man: Tactile-Informed Prior-Free Manipulation of Articulated Objects
+            </a>
+            <a class="navbar-item" href="https://arxiv.org/abs/2508.02204" target="_blank">
+              [ArXiv] TacMan-Turbo: Proactive Tactile Control for Articulated Object Manipulation
+            </a>
+            <a class="navbar-item" href="https://www.nature.com/articles/s42256-025-01053-3" target="_blank">
+              [NMI25] F-TAC Hand: A Biomimetic Hand Featuring High-Resolution Tactile Sensing
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
   <section class="hero">
     <div class="hero-body" style="padding-bottom: 0;">
       <div class="container is-max-desktop">
@@ -91,7 +121,7 @@
                 <sup>4</sup> College of Engineering, Peking University
               </span>
               <span class="eql-cntrb"><small><br /><sup>*</sup> Equal Contributor</small></span>
-              <span class="eql-cntrb"><small><br /><sup>✉️</sup> Corresponding Author</small></span>
+              <span class="eql-cntrb"><small>&nbsp&nbsp&nbsp&nbsp&nbsp<sup>✉️</sup> Corresponding Author</small></span>
             </div>
 
             <div class="column has-text-centered">
@@ -121,17 +151,6 @@
                 <!-- Github link -->
                 <span class="link-block">
                   <a href="https://github.com/leiyaocui/B_STAR" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code</span>
-                  </a>
-                </span>
-
-                <!-- Github link -->
-                <span class="link-block">
-                  <a href="https://github.com/SiruiXie/BSTAR_ARM_EXP" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -468,7 +487,7 @@
       </div>
     </div>
   </section>
-  <!-- End real-world results --> 
+  <!-- End real-world results -->
 
   <!-- Paper acknowledgment -->
   <section class="section hero" style="padding-top: 0;">
