Update citation section in index.html

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://zihangzhao.com/" target="_blank">Zihang Zhao</a><sup>1,2 *</sup>,
+                <a href="https://zihangzhao.com/" target="_blank">Zihang Zhao</a><sup>1,2 ⚖️</sup>,
               </span>
               <span class="author-block">
-                <a href="https://lycui.com/" target="_blank">Leiyao Cui</a><sup>1,3 *</sup>,
+                <a href="https://lycui.com/" target="_blank">Leiyao Cui</a><sup>1,3 ⚖️</sup>,
               </span>
               <span class="author-block">
-                <a href="https://siruixie.github.io/" target="_blank">Sirui Xie</a><sup>1 *</sup>,
+                <a href="https://siruixie.github.io/" target="_blank">Sirui Xie</a><sup>1 ⚖️</sup>,
               </span>
               <span class="author-block">
                 <a href="https://saiyao233.github.io/" target="_blank">Saiyao Zhang</a><sup>1,3</sup>,
@@ -120,7 +120,7 @@
               <span class="author-block">
                 <sup>4</sup> College of Engineering, Peking University
               </span>
-              <span class="eql-cntrb"><small><br /><sup>*</sup> Equal Contributor</small></span>
+              <span class="eql-cntrb"><small><br /><sup>⚖️</sup> Equal Contributor</small></span>
               <span class="eql-cntrb"><small>&nbsp&nbsp&nbsp&nbsp&nbsp<sup>✉️</sup> Corresponding Author</small></span>
             </div>
 
