--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <h1 class="title is-1 publication-title">
               B*: Efficient and Optimal Base Placement for Fixed-Base Manipulators
             </h1>
+            <h5 class="title is-5 publication-title">IEEE Robotics and Automation Letters (RA-L) 2025</h5>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
