Update meta keywords and description in index.html for improved SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="keywords" content="Base placement, motion planning, and robotics" />
+  <meta name="keywords" content="B* algorithm, base placement, motion planning, robotics" />
+  <meta name="description"
+    content="An introduction to B* algorithm, base placement strategies, and motion planning in robotics, with practical examples, algorithms, and reproducible experiments." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>
