--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           </h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
               src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
-              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+              frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
               style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
           </div>
         </div>
