--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
           <h2 class="subsection-title">Optimization Process of B*</h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
               src="https://player.vimeo.com/video/1050685543?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
-              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" 
               style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
           </div>
         </div>
@@ -483,7 +483,7 @@
           <h2 class="title">Real-World Validations</h2>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe
               src="https://player.vimeo.com/video/1096935900?h=4ef10dfe88&badge=0&autopause=0&player_id=0&app_id=58479"
-              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" 
               style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Supplementary Video"></iframe>
           </div>
         </div>
