Add DOI link for IEEE publication in index.html

--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
 
             <div class="column has-text-centered">
               <div class="publication-links">
+                <!-- DOI link -->
+                <span class="link-block">
+                  <a href="https://doi.org/10.1109/LRA.2025.3604741" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="ai ai-ieee"></i>
+                    </span>
+                    <span>IEEE</span>
+                  </a>
+                </span>
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
                   <a href="https://arxiv.org/pdf/2504.12719.pdf" target="_blank"
